Let features::kScrollAnchoring disable the Blink REF.

BUG=651874

Review-Url: https://codereview.chromium.org/2379053004
Cr-Commit-Position: refs/heads/master@{#422244}

Former-commit-id: 560680291035d12baa675c8fd9681b1c04a4b4ac